# EventTalks

./: .gitignore  .sesskey  DataTalks.md  Dockerfile  EventTalks.md  HSLTalks.md  Makefile  README.md  api_checker.py  apis.json  build.sh  cataloge_loader.py  core.html  core.html.md  devcheck.sh  digitraffic_openapi.json  docker-compose.yml  env_example  geoapifi_test.py  geoapify_geocoding_openapi_spec.yaml  geoapify_routing_openapi_spec.yaml  hockey_openapi.json  index.html  openapi.json:Zone.Identifier  package-lock.json  package.json  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  setup.py  sitemap.xml  weather_openapi_spec.yaml
DataTalks/: __init__.py  _modidx.py  api.py  api_clients.py  arena.py  arena_agent.py  camera_talk.py  fastmcp_tools.py  mcp_tools.py  parking.py  parking_tools.py
nbs/: .sesskey  01_api_clients.ipynb  02_parking_tools.ipynb  03_fastmcp_tools.ipynb  04_arena_agent.ipynb  05_glue_free_apis.ipynb  05_mcp_tools.ipynb  07_apiguru.ipynb  08_camera_talk.ipynb  10_drafts.ipynb  _quarto.yml  demo_event_page.html  index.ipynb  nbdev.yml  sidebar.yml
tests/: test_api.py  test_parking.py
